--- a/pages/withdrawal/withdrawal.wxml
+++ b/pages/withdrawal/withdrawal.wxml
@@ -8,7 +8,7 @@
     </view>
     <view class="box">
       <view class="weixin_box" wx:if="{{selected1}}">
-        <view class="limit">您当前余额可提现：{{member_recharge_money}}元</view>
+        <view class="limit">您当前余额可提现：{{day_max_money}}元</view>
         <view class="tip">温馨提示：</view>
         <view class="tip">① 您申请会员的充值余额，需用于平台消费，不能用于提现</view>
         <view class="tip">② 由于各运营方已收取相应的中间手续费用，为保障用户利益，申请提现只收取2%提现手续费；</view>
@@ -20,15 +20,15 @@
 
             </view>
             <view class="form_list">
-              <input type="number" class="form_list_input" placeholder=" 请输入金额，不能小于1000" name="money" />
+              <input type="number" class="form_list_input" placeholder=" 请输入金额，不能小于{{min_money}}" name="money"  bindchange="bindoldChange"/>
               <text class="danwei">元</text>
             </view>
 
             <view style=' display: flex; align-items: center;position: relative;'>
               <view class="tip">提现手续费
               </view>
-              <view style='color:red;font-size:24rpx;'>￥20</view>
-              <view class="tip">(费率2%)
+              <view style='color:red;font-size:24rpx;'>￥{{rate}}</view>
+              <view class="tip">(费率{{service_charge}}%)
               </view>
             </view>
             <view class='card'>
