--- a/pages/diy/index/index.wxss
+++ b/pages/diy/index/index.wxss
@@ -5,9 +5,10 @@
 .foot_text {
   text-align:center;
   font-size:28rpx;
-  color:rgba(0, 0, 0, 0.6);
   background-color:#fff;
   height:80rpx;
   padding:15rpx;
   margin-top: 15rpx;
+  visibility: hidden;
+  color: #fff;
 }
