--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -77,8 +77,13 @@
                     </view>
                 </view>
             </view>
-            <view class="temp-echarts">
-                <ec-canvas id="mychart-three" canvas-id="mychart-multi-three" ec="{{ ecThree }}"></ec-canvas>
+            <view style="flex: 1; display: flex; flex-direction: column; overflow: auto;">
+                <view class="temp-echarts">
+                    <ec-canvas id="mychart-three" canvas-id="mychart-multi-three" ec="{{ ecThree }}"></ec-canvas>
+                </view>
+                <view class="temp-echarts">
+                    <ec-canvas id="mychart-four" canvas-id="mychart-multi-four" ec="{{ ecFour }}"></ec-canvas>
+                </view>
             </view>
         </view>
     </swiper-item>
