--- a/pages/live/index/index.wxml
+++ b/pages/live/index/index.wxml
@@ -1,24 +1,13 @@
 <!-- live/index/index.wxml -->
 <view class='main'>
-<scroll-view scroll-x="true" style="height: 108rpx;white-space: nowrap; display: flex;  border-bottom: 3rpx solid rgb(204, 204, 204);">
-    <view class="list {{currentTab==index ? ' change_current ' : ''}}" wx:for="{{ico}}" wx:key="{{index}}" data-current="{{index}}" bindtap="swichNav">
-        <view class='ico'>
+<scroll-view scroll-x="true" style="height: 108rpx;white-space: nowrap; display: flex;  border-bottom: 3rpx solid rgb(204, 204, 204);" scroll-into-view="{{con}}" scroll-with-animation="true">
+    <view class="list {{currentTab==index ? 'change_current' : ''}}" wx:for="{{ico}}" wx:key="{{index}}" data-id="{{index}}" id="b_{{index}}"  bindtap="swichNav">
+        <view class='ico' >
           <image src='http://zhihuichacang.com/u2133.png'></image>
         </view>
-        <view class="text {{currentTab==index ? ' text_1 ' : ''}}">{{item}}</view>
+        <view  class="text {{currentTab==index ? ' text_1 ' : ''}}">{{item}}</view>
     </view>  
 </scroll-view>
-  <!-- <view class='nav'>
-    <view class="tea {{currentTab==0 ? ' change_current ' : ''}}" data-current="0" bindtap="swichNav">
-      茶仓
-    </view>
-    <view class="tea {{currentTab==1 ? ' change_current ' : ''}}" data-current="1" bindtap="swichNav">
-      茶山
-    </view>
-    <view class="tea {{currentTab==2 ? ' change_current ' : ''}}" data-current="2" bindtap="swichNav">
-      茶厂
-    </view>
-  </view> -->
   <view class='swiper_main'>
     <swiper current="{{currentTab}}" style='height: {{winHeight}}rpx' bindchange="bindChange">
       <swiper-item>
