--- a/pages/members/members.wxss
+++ b/pages/members/members.wxss
@@ -191,3 +191,14 @@ align-items: center;
   display: flex;
   align-items: center;
 }
+.add_address{
+  width: 100%;
+  height: 100rpx;
+  line-height: 100rpx;
+  color: #fff;
+  position: fixed;
+  bottom: 0;
+  background: #00BBFF;
+  text-align: center;
+  font-size: 36rpx;
+}
