--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -284,11 +284,11 @@
         </view>
         <view class='box_list_four'>
         <view>
-            <view class='cancel type_button' bindtap="go_apply_after_sales" data-id="{{item.info[0].id}}" data-order="{{item.parts_order_number}}" data-status="{{item.status}}">
-              售后
-            </view>
             <view class='payment' bindtap="go_evaluation" data-id="{{item.info[0].id}}" data-status="{{item.status}}">
               追加评价
+            </view>
+            <view class='cancel type_button' style="margin-left:10rpx;">
+              已完成
             </view>
           </view>
           <!-- <view>
