--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -64,7 +64,8 @@
           </view>
         </view>
         <view class="" style="width:100%;height:100%;" wx:if="{{isLive}}">
-          <video id="myVideo" src="http://hls01open.ys7.com/openlive/d208d656ba774bc985a4aa7154cf329a.hd.m3u8" style="width: 100%;height: 400rpx;" ></video>
+          <video id="myVideo" src="http://hls01open.ys7.com/openlive/d208d656ba774bc985a4aa7154cf329a.hd.m3u8" style="width: 100%;height: 400rpx;" 
+          poster></video>
         </view>
         <block wx:for="{{item.getArr}}" wx:key="{{index}}">
           <view class="storage-manage">
