--- a/pages/live/index/index.wxml
+++ b/pages/live/index/index.wxml
@@ -1,49 +1,49 @@
 <!-- live/index/index.wxml -->
-<view class='main'>
-<scroll-view scroll-x="true" style="height: 108rpx;white-space: nowrap; display: flex;  border-bottom: 3rpx solid rgb(204, 204, 204);" scroll-into-view="{{con}}" scroll-with-animation="true">
-    <view class="list {{currentTab==index ? 'change_current' : ''}}" wx:for="{{live}}" wx:key="{{index}}" data-id="{{index}}" id="b_{{index}}"  bindtap="swichNav">
-        <view class='ico' >
-          <image src='{{url}}{{item.icon_image}}'></image>
-        </view>
-        <view  class="text {{currentTab==index ? ' text_1 ' : ''}}">{{item.title}}</view>
-    </view>  
-</scroll-view>
-  <view class='swiper_main'>
-    <swiper current="{{currentTab}}" style='height: {{winHeight}}rpx' bindchange="bindChange" wx:for="{{live}}" wx:key>
-      <swiper-item>
-        <scroll-view scroll-y='true'>
-          <block wx:for="{{item.list}}" wx:key>
-            <view>
-              <view class="slide-image">
-                <image src="{{url}}{{item.icon_image}}" bindtap='toLive'></image>
-              </view>
-              <view class='status_bar'>
-                <view class=''>
-                  <image src='http://zhihuichacang.com/u2133.png' class='tubiao'></image>
-                </view>
-                <text class='store_name'>{{item.classify_name}}</text>
-                <view class=''>
-                  <image src='http://zhihuichacang.com/u5440.png' class='tubiao'></image>
-                </view>
-                <text class='size'>{{item.numbers}}</text>
-                <view class=''>
-                  <image src='http://zhihuichacang.com/u5437.png' class='tubiao'></image>
-                </view>
-                <text class='size'>{{item.comments}}</text>
-                <view class=''>
-                  <image src='http://zhihuichacang.com/u5439.png' class='tubiao'></image>
-                </view> 
-                <text class='size'>{{item.clickings}}</text>
-                <view class=''>
-                  <image src='http://zhihuichacang.com/u5462.png' class='tubiao'></image>
-                </view>
-                <text class='size_last'>{{item.shares}}</text>
-              </view>
-            </view>
-          </block>
-        </scroll-view>
-      </swiper-item>
-    </swiper>
- 
+<!-- <view class='main'> -->
+<scroll-view scroll-x="true" style="height: 108rpx;white-space: nowrap; border-bottom: 3rpx solid rgb(204, 204, 204);text-align:center;" scroll-into-view="{{con}}" scroll-with-animation="true">
+  <view class="list {{currentTab==index ? 'change_current' : ''}}" wx:for="{{live}}" wx:key="{{index}}" data-id="{{index}}" id="b_{{index}}" bindtap="swichNav">
+    <view class='ico'>
+      <image src='{{url}}{{item.icon_image}}'></image>
+    </view>
+    <view class="text {{currentTab==index ? ' text_1 ' : ''}}">{{item.title}}</view>
   </view>
-</view>
+</scroll-view>
+<!-- <view class='swiper_main'> -->
+<swiper current="{{currentTab}}" class="swiper-container" duration="300" style='margin:20rpx;' bindchange="bindChange">
+  <swiper-item wx:for="{{live}}" wx:key>
+    <scroll-view scroll-y='true'>
+      <block wx:for="{{item.list}}" wx:key>
+        <view>
+          <view class="slide-image">
+            <image src="{{url}}{{item.icon_image}}" bindtap='toLive'></image>
+          </view>
+          <view class='status_bar'>
+            <view class=''>
+              <image src='http://zhihuichacang.com/u2133.png' class='tubiao'></image>
+            </view>
+            <view class='store_name'>{{item.classify_name}}</view>
+            <div style="flex:1;"></div>
+            <view class=''>
+              <image src='http://zhihuichacang.com/u5440.png' class='tubiao'></image>
+            </view>
+            <view class='size'>{{item.numbers}}</view>
+            <view class=''>
+              <image src='http://zhihuichacang.com/u5437.png' class='tubiao'></image>
+            </view>
+            <view class='size'>{{item.comments}}</view>
+            <view class=''>
+              <image src='http://zhihuichacang.com/u5439.png' class='tubiao'></image>
+            </view>
+            <view class='size'>{{item.clickings}}</view>
+            <view class=''>
+              <image src='http://zhihuichacang.com/u5462.png' class='tubiao'></image>
+            </view>
+            <view class='size_last'>{{item.shares}}</view>
+          </view>
+        </view>
+      </block>
+    </scroll-view>
+  </swiper-item>
+</swiper>
+<!-- </view> -->
+<!-- </view> -->
