--- a/pages/live/index/index.wxss
+++ b/pages/live/index/index.wxss
@@ -1,5 +1,5 @@
-/* @import "../../../__wuBaseWxss__/1.wxss";  */
-/* @import "../../../__wuBaseWxss__/2.wxss"; */
+
+page{height: 100%;}
 /* 导航 */
 
 .all {
@@ -51,6 +51,7 @@
 /* .scroll_main{
   display: inline;
 } */
+swiper.swiper-container{height: 93%;}
 .scoll-h {
   height: 100%;
 }
@@ -58,7 +59,13 @@
 .swiper_main{
   margin: 20rpx;
 }
+.swiper-slide{
+  overflow: hidden;
+}
 
+.swiper-slide-active{
+  overflow: auto !important;
+}
 .slide-image > image {
   width: 100%;
   height: 300rpx;
@@ -69,31 +76,31 @@
   height: 60rpx;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   font-size: 28rpx;
+  line-height: 30rpx;
   align-items: center;
 }
 
 .tubiao {
-  width: 50rpx;
-  height: 50rpx;
+  width: 45rpx;
+  height: 45rpx;
   margin-right: 10rpx;
 }
 
 .store_name {
   font-size: 28rpx;
   color: rgb(153, 153, 0);
-  margin-right: 60rpx;
   padding-bottom: 8rpx;
 }
 
 .size {
   margin-right: 15rpx;
-  
+
 }
-.size .size_last {
-  padding-bottom: 12rpx;
-}
+/* .size,.size_last {
+  padding: auto;
+} */
 /* 底部文字对齐 */
 .zbj {
   display:flex;
