--- a/pages/live/synopsis/synopsis.wxss
+++ b/pages/live/synopsis/synopsis.wxss
@@ -5,7 +5,9 @@
 }
 page {
   font-size: 28rpx;
+  height: 100%;
 }
+swiper.swiper-container{height: 93%;}
 .nav_synopsis {
   display: flex;
   flex-direction: row;
