--- a/pages/circle/circle.wxss
+++ b/pages/circle/circle.wxss
@@ -1,5 +1,5 @@
-@import "../../__wuBaseWxss__/1.wxss";
-@import "../../__wuBaseWxss__/2.wxss";
+@import "../../wuBaseWxss/1.wxss";
+@import "../../wuBaseWxss/2.wxss";
 /* 底部导航文字对齐 */
 .zbj {
   display:flex;
