--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -74,7 +74,7 @@
       </view>
       <view class='right'>
         <view style='align-items:center;height:20px;'>
-          <image style='width:15px;height:15px;padding-left:25px;' src='http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png'></image>
+          <image style='width:15px;height:15px;padding-left:25px;' src='http://zhihuichacang.com/u1959.png'></image>
         </view>
       </view>
     </view>
@@ -91,7 +91,7 @@
       </view>
       <view class='right'>
         <view style='align-items:center;height:20px;'>
-          <image style='width:15px;height:15px;padding-left:25px;' src='http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png'></image>
+          <image style='width:15px;height:15px;padding-left:25px;' src='http://zhihuichacang.com/u1959.png'></image>
         </view>
       </view>
     </view>
