--- a/storage/pages/zcDetail/zcDetail.wxss
+++ b/storage/pages/zcDetail/zcDetail.wxss
@@ -67,7 +67,7 @@ view{overflow: initial !important;}
 .dialog{display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; flex-direction: column; position: absolute; bottom: 0; left: 0; transition: transform .3s; background-color: #fff; color: #333; font-size: 28rpx; width: 100%; height: 83%; transform: translateY(100%); -webkit-transform: translateY(100%);}
 .dialog.dialog-popup{transform: translateY(0); -webkit-transform: translateY(0);}
 .dialog.dialog-popup .sku-img{display: block;}
-.dialog-content{display: flex; flex: 1; padding: 0 20rpx;}
+.dialog-content{display: flex; flex: 1; padding: 0 20rpx; height: 100%;}
 .dialog-xsku{width: 100%;}
 .tb-sku-container{display: flex; width: 100%; height: 100%; -webkit-box-orient: vertical; -webkit-box-direction: normal; flex-direction: column; font-size: 28rpx; color: #333; box-sizing: border-box; padding: 20rpx 0;}
 .sku-pro{position: relative; padding-bottom: 32rpx; border-bottom: 2rpx solid #f2f2f2;}
@@ -100,6 +100,6 @@ view{overflow: initial !important;}
 .gears .active{border-color: #f00;}
 .gears .gearAll{line-height: normal;}
 .gears .gear .gearMon{color: #999;}
-.sku-btns{position: absolute; bottom: 0; left: 0; width: 100%;}
+.sku-btns{position: absolute; bottom: 0; left: 0; width: 100%; z-index: 999;}
 .sku-btns .support{height: 100rpx; text-align: center; line-height: 100rpx; color: #fff; background-color: #ff6700;}
 .sku-btns .outstockbtn{background-color: rgba(0,0,0,.3);}
