--- a/pages/good/good.wxml
+++ b/pages/good/good.wxml
@@ -13,7 +13,7 @@
       <view class='good_box'>
         <view class="nav_goods_box" wx:for="{{item.child}}" wx:for-item="good" bindtap="go_gooddetail" data-id='{{good.id}}'>
           <!-- <view class="nav-img-box"> -->
-            <image class="nav_goods_l" src="{{url}}{{good.goods_show_image}}"></image>
+            <image class="nav_goods_l" src="{{good.goods_show_image}}"></image>
           <!-- </view> -->
           <view class="nav_goods_r">
             <view class="nav_goods_name">{{good.goods_name}}</view>
