--- a/pages/evaluation/evaluation.wxml
+++ b/pages/evaluation/evaluation.wxml
@@ -4,7 +4,7 @@
   <form  bindsubmit="formSubmit" content-type="multipart/form-data">
     <view class="good_content">
         <view class="good_infor" wx:for="{{goods}}">
-            <image class="good_img" src="{{url}}{{item.goods_image}}" mode="widthFix" ></image>
+            <image class="good_img" src="{{item.goods_image}}" mode="widthFix" ></image>
             <text class="good_name">{{item.parts_goods_name}}</text>  
         </view>
         <view class="reason">
