--- a/pages/integral_center/integral_center.wxml
+++ b/pages/integral_center/integral_center.wxml
@@ -5,7 +5,7 @@
                     <view class="weui-grid" wx:for="{{routers}}" wx:key="name" bindtap="go_gooddetail"  data-id="{{item.id}}" wx:if="{{item}}">
                             <view class='weui-grid__bg'>
                                 <view class="weui-grid__icon">
-                                    <image src="{{url}}{{item.goods_show_image}}" mode="scaleToFill" />
+                                    <image src="{{item.goods_show_image}}" mode="scaleToFill" />
                                 </view>
                                 <text class="weui-grid_name">{{item.goods_name}}</text>
                                 <text class="weui-grid_kuchun">库存{{item.goods_repertory}}片</text>
