--- a/pages/integral_order/integral_order.wxml
+++ b/pages/integral_order/integral_order.wxml
@@ -20,14 +20,14 @@
 					</view>
 					<view class='box_list_two' >
 						<view class='img'>
-							<image src='{{url}}{{item.goods_show_image}}' mode='aspectFill'></image>
+							<image src='{{item.goods_show_image}}' mode='aspectFill'></image>
 						</view>
 						<view class='good_infor'>
 							<view class='good_name'>{{item.parts_goods_name}}</view>
 							<view class='good_selling'>{{item.goods_describe}}</view>
 							<view class='good_monye'>
 								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<image src='{{member_grade_img}}' class='user_img'></image>
 									<text class='uite'>{{item.integral}}积分</text>
 								</view>
 								<view class='num'>x{{item.order_quantity}}</view>
@@ -52,14 +52,14 @@
 					</view>
 						<view class='box_list_two' >
 						<view class='img'>
-							<image src='{{url}}{{item.goods_show_image}}' mode='aspectFill'></image>
+							<image src='{{item.goods_show_image}}' mode='aspectFill'></image>
 						</view>
 						<view class='good_infor'>
 							<view class='good_name'>{{item.parts_gogoods_show_imageods_name}}</view>
 							<view class='good_selling'>{{item.goods_describe}}</view>
 							<view class='good_monye'>
 								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<image src='{{member_grade_img}}' class='user_img'></image>
 									<text class='uite'>{{item.integral}}积分</text>
 								</view>
 								<view class='num'>x{{item.order_quantity}}</view>
@@ -84,14 +84,14 @@
 					</view>
 					<view class='box_list_two' >
 						<view class='img'>
-							<image src='{{url}}{{item.goods_show_image}}' mode='aspectFill'></image>
+							<image src='{{item.goods_show_image}}' mode='aspectFill'></image>
 						</view>
 						<view class='good_infor'>
 							<view class='good_name'>{{item.parts_gogoods_show_imageods_name}}</view>
 							<view class='good_selling'>{{item.goods_describe}}</view>
 							<view class='good_monye'>
 								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<image src='{{member_grade_img}}' class='user_img'></image>
 									<text class='uite'>{{item.integral}}积分</text>
 								</view>
 								<view class='num'>x{{item.order_quantity}}</view>
