--- a/pages/live/index/index.wxml
+++ b/pages/live/index/index.wxml
@@ -3,7 +3,7 @@
 <scroll-view scroll-x="true" style="height: 108rpx;white-space: nowrap; border-bottom: 3rpx solid rgb(204, 204, 204);text-align:center;" scroll-into-view="{{con}}" scroll-with-animation="true">
   <view class="list {{currentTab==index ? 'change_current' : ''}}" wx:for="{{live}}" wx:key="{{index}}" data-id="{{index}}" id="b_{{index}}" bindtap="swichNav">
     <view class='ico'>
-      <image src='{{url}}{{item.icon_image}}'></image>
+      <image src='{{item.icon_image}}'></image>
     </view>
     <view class="text {{currentTab==index ? ' text_1 ' : ''}}">{{item.title}}</view>
   </view>
@@ -15,7 +15,7 @@
       <block wx:for="{{item.list}}" wx:key>
         <view>
           <view class="slide-image">
-            <image src="{{url}}{{item.icon_image}}" data-id="{{item.id}}" data-title="1" bindtap='toLive'></image>
+            <image src="{{item.icon_image}}" data-id="{{item.id}}" data-title="1" bindtap='toLive'></image>
           </view>
           <view class='status_bar'>
             <view class=''>
