--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -116,14 +116,14 @@
             </view>
             <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -141,14 +141,14 @@
             </view>
             <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -166,14 +166,14 @@
             </view>
           <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -194,14 +194,14 @@
             </view>
           <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -224,14 +224,14 @@
             </view>
             <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -249,14 +249,14 @@
             </view>
            <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -275,14 +275,14 @@
             </view>
             <view class='box_list_two' bindtap="redirectto" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}">
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                     <view class='num'>x{{item.order_quantity}}</view>
