--- a/storage/pages/zcOrder/zcOrder.wxml
+++ b/storage/pages/zcOrder/zcOrder.wxml
@@ -47,14 +47,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
@@ -83,14 +83,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
@@ -117,14 +117,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
@@ -152,14 +152,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
@@ -187,14 +187,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
@@ -221,14 +221,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
@@ -255,14 +255,14 @@
           </view>
           <view class='box_list_two' wx:for="{{item.info}}" wx:key="index">
             <view class='img'>
-              <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+              <image src='{{item.goods_image}}' mode='aspectFill'></image>
             </view>
             <view class='good_infor'>
               <view class='good_name'>{{item.parts_goods_name}}</view>
               <view class='good_selling'>{{item.goods_describe}}</view>
               <view class='good_monye'>
                 <view class='good_uite'>
-                  <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                  <image src='{{member_grade_img}}' class='user_img'></image>
                   <text class='uite'>￥{{item.goods_money}}/片</text>
                 </view>
                 <view class='num'>x{{item.order_quantity}}</view>
