--- a/storage/pages/zcOrderDetail/zcOrderDetail.wxml
+++ b/storage/pages/zcOrderDetail/zcOrderDetail.wxml
@@ -59,14 +59,14 @@
             </view>
             <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -84,14 +84,14 @@
             </view>
             <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -109,14 +109,14 @@
             </view>
           <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -137,14 +137,14 @@
             </view>
           <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -167,14 +167,14 @@
             </view>
             <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -192,14 +192,14 @@
             </view>
             <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
@@ -218,14 +218,14 @@
             </view>
             <view class='box_list_two'>
                 <view class='img'>
-                    <image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+                    <image src='{{item.goods_image}}' mode='aspectFill'></image>
                 </view>
                 <view class='good_infor' >
                     <view class='good_name'>{{item.parts_goods_name}}</view>
                     <view class='good_selling'>{{item.goods_describe}}</view>
                     <view class='good_monye'>
                         <view class='good_uite'>
-                            <image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+                            <image src='{{member_grade_img}}' class='user_img'></image>
                             <text class='uite'>￥{{item.goods_money}}/片</text>
                         </view>
                     <view class='num'>x{{item.order_quantity}}</view>
